change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dcl/d",
+    "name": "milton2913/d",
     "description": "This is test project",
     "type": "Library",
     "license": "MIT",
